[gd_scene load_steps=3 format=3 uid="uid://ct41yjhcksxet"]

[ext_resource type="Script" path="res://code/student_quiz_mode.gd" id="1_w2uy5"]
[ext_resource type="PackedScene" uid="uid://48ghr5fgdfwe" path="res://scenes/high_score_list.tscn" id="2_jyr4q"]

[node name="student_quiz_mode" type="Control" node_paths=PackedStringArray("quiz_title", "num_questions", "score", "question_title", "question_time", "question_reward", "choice_container", "submit_button", "question_screen", "answer_screen", "answer_screen_text")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w2uy5")
quiz_title = NodePath("header/quiz_title")
num_questions = NodePath("header/question_number")
score = NodePath("header/score")
question_title = NodePath("question_screen/center/question_container/question_title")
question_time = NodePath("question_screen/center/question_container/question_time")
question_reward = NodePath("question_screen/center/question_container/reward")
choice_container = NodePath("question_screen/center/question_container/choice_container")
submit_button = NodePath("question_screen/center/question_container/submit_button")
question_screen = NodePath("question_screen")
answer_screen = NodePath("answer_screen")
answer_screen_text = NodePath("answer_screen/Panel/answer")
quiz_timeout = 5

[node name="header" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2

[node name="question_number" type="Label" parent="header"]
offset_right = 637.0
offset_bottom = 26.0
size_flags_horizontal = 3
text = "1 OF 12"
horizontal_alignment = 1
vertical_alignment = 1

[node name="quiz_title" type="Label" parent="header"]
offset_left = 641.0
offset_right = 1278.0
offset_bottom = 26.0
size_flags_horizontal = 3
text = "QUIZ TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="score" type="Label" parent="header"]
offset_left = 1282.0
offset_right = 1920.0
offset_bottom = 26.0
size_flags_horizontal = 3
text = "TOTAL SCORE: 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="question_screen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="center" type="CenterContainer" parent="question_screen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="question_container" type="VBoxContainer" parent="question_screen/center"]
offset_left = 890.0
offset_top = 491.0
offset_right = 1029.0
offset_bottom = 588.0

[node name="question_title" type="RichTextLabel" parent="question_screen/center/question_container"]
offset_right = 139.0
offset_bottom = 23.0
bbcode_enabled = true
text = "[center]QUESTION TITLE[/center]"
fit_content_height = true

[node name="question_time" type="ProgressBar" parent="question_screen/center/question_container"]
offset_top = 27.0
offset_right = 139.0
offset_bottom = 31.0
show_percentage = false

[node name="reward" type="RichTextLabel" parent="question_screen/center/question_container"]
offset_top = 35.0
offset_right = 139.0
offset_bottom = 58.0
bbcode_enabled = true
text = "[center] REWARD [/center]"
fit_content_height = true

[node name="choice_container" type="GridContainer" parent="question_screen/center/question_container"]
offset_top = 62.0
offset_right = 139.0
offset_bottom = 62.0
columns = 2

[node name="submit_button" type="Button" parent="question_screen/center/question_container"]
offset_top = 66.0
offset_right = 139.0
offset_bottom = 97.0
text = "SUBMIT ANSWER"

[node name="answer_screen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="answer_screen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="high_score_list" parent="answer_screen/CenterContainer" instance=ExtResource("2_jyr4q")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 960.0
offset_top = 540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 1
grow_vertical = 1

[node name="Panel" type="Panel" parent="answer_screen"]
custom_minimum_size = Vector2i(0, 50)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="answer" type="Label" parent="answer_screen/Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -13.0
offset_right = 38.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "CORRECT!"
